align branch + fix conflicts

--- a/src/components/CreatorPage/Main/MainComponents/Header.scss
+++ b/src/components/CreatorPage/Main/MainComponents/Header.scss
@@ -8,7 +8,6 @@
     width: 15rem;
     height: 4rem;
     padding-top: 0.7rem;
-    }
     &-span {
       font-family: "FuturaHeavy";
       font-weight: 700;
@@ -25,7 +24,6 @@
     position: relative;
     top: 3px;
   }
-  cursor: pointer;
   &__avatar {
     position: absolute;
     display: grid;
